bat.string1.lessons.bat.string1.FrontTimes.scala.error
frontTimes:3: error: ';' expected but '(' found.
  var letters:Array[String](str.length) = str.split();
                           ^